# bandcorder

./: .gitignore  README.md
server/: .gitignore  .mockery.yml  README.md  active_mic_label.py  active_recording_info.py  app.go  app.py  audio_rw_thread.py  audio_test.py  config.yml  file_storage_service.py  go.mod  go.sum  interval_task.py  main.go  main.py  makefile  pyproject.toml  recorder.py  recording_controller.py  recording_state_label.py  recording_state_notifier.py  recordings_treeview.py  ui.py  wails.json  websocket_notifier.py
server/frontend/: index.html  package-lock.json  package.json  package.json.md5
server/frontend/src/: App.css  App.tsx  style.css
server/frontend/src/components/: contants.ts  events.ts
server/frontend/src/pages/: metronome-page.module.css  metronome-page.tsx
server/frontend/src/utils/: linear-interpolator.ts  time.ts
server/frontend/wailsjs/go/: models.ts
server/internal/pkg/: recorder.go
server/internal/pkg/controllers/: file_controller.go  filecontroller.go  metronome_controller.go  recording_controller.go  websocket_controller.go
server/internal/pkg/facades/: file_system_storage_facade.go  file_system_storage_facade_test.go  recording_facade.go  recording_facade_test.go
server/internal/pkg/interfaces/: audio_processor.go  event_bus.go  event_dispatcher.go  metronome.go  playback_service.go  recorder.go  recording_event_bus.go  recording_state_notifier.go  sender.go  storage_service.go  time_provider.go
server/internal/pkg/models/: event.go  live_audio_event.go  misc_events.go  (+6 more)
server/resources/: resources.go
(+189 files in other folders)
